--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.items {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.item-1, .item-2, .item-3, .item-4 {
+  width: 200px;
+  text-align: center;
+  text-wrap: wrap;
 }
 
 /* do not edit this footer */
